<resources>
    <string name="app_name">Vacation Date Finder</string>
    <string name="header_message">Ideal Temp (F)</string>
    <string name="text_temp">60</string>
    <string name="button_go">Find my ideal dates</string>
    <string name="button_current">Find current weather</string>
    <string name="action_settings">Settings</string>
    <string name="city_text">Enter City</string>
    <string name="idvactext">Ideal Vacation Dates</string>
    <string name="firstdatetext">1 January</string>
    <string name="totext">to</string>
    <string name="seconddatetext">1 January</string>
    <string name="text_days">Enter vacation length in days</string>
    <string name="test">This is a test</string>
    <string name="rain_message">Enter Ideal Precipitation (in)</string>
    <string name="text_rain">5</string>
    <string name="current_weather">Current Weather</string>
</resources>