<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calvin.weatherapp.DisplayIdealDates">

    <TextView
        android:id="@+id/id_vac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textSize="35sp"
        android:textAlignment="center"

        android:text="@string/idvactext"/>

    <TextView
        android:id="@+id/firstdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="35sp"
        android:textAlignment="center"
        android:text="@string/firstdatetext"/>

    <TextView
        android:id="@+id/to_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="35sp"
        android:text="@string/totext"/>

    <TextView
        android:id="@+id/seconddate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="35sp"
        android:text="@string/seconddatetext"/>

</LinearLayout>
