<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calvin.weatherapp.MainActivity">


    <TextView android:id="@+id/enter_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:typeface="sans"
        android:layout_marginTop="0dp"
        android:text="@string/city_text" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_city"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="0dp"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <TextView android:id="@+id/text_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:typeface="sans"
        android:text="@string/text_days"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/user_days"
        android:inputType="number"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:maxLength="2"
        android:textAlignment="center"/>


    <TextView android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:typeface="sans"
        android:layout_marginTop="15dp"
        android:text="@string/header_message"/>
    <SeekBar
        android:id="@+id/user_temp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="120"
        android:progress="60"
        android:minHeight="3dip"
        android:maxHeight="3dip"
        android:progressDrawable="@android:color/holo_green_light"
        android:layout_marginTop="10dp"/>

    <TextView android:id="@+id/text_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:typeface="sans"
        android:layout_marginTop="5dp"
        android:text="@string/text_temp" />

    <TextView android:id="@+id/rain_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:typeface="sans"
        android:layout_marginTop="5dp"
        android:text="@string/rain_message"/>

    <SeekBar
        android:id="@+id/user_rain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="5"
        android:minHeight="3dip"
        android:maxHeight="3dip"
        android:progressDrawable="@android:color/holo_blue_light"
        android:layout_marginTop="5dp"/>

    <TextView android:id="@+id/text_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:typeface="sans"
        android:layout_marginTop="5dp"
        android:text="@string/text_rain" />

    <Button
        android:id="@+id/button_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/button_go"
        android:background="@color/LightBlue"
        android:layout_marginTop="5dp"
        android:onClick="calc_ideal" />

    <Button
        android:id="@+id/button_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/button_current"
        android:background="@color/LightBlue"
        android:layout_marginTop="25dp"
        android:onClick="get_current_weather" />

</LinearLayout>
